fix: fix build for java 1.8